--- a/products/VISIO2021STD.html
+++ b/products/VISIO2021STD.html
@@ -149,8 +149,8 @@
         <div class="row">
 
             <div class="col-md-6 text-center text-md-left mb-4">
-                <div class="footer-logo">
-                    <img src="../images/Logo.webp" alt="logo">
+                <div class="footer-logo mb-4">
+                    <img src="images/logoValuxyWhite.webp" alt="logo">
                 </div>
                 <div class="social-icons">
                     <a href="#"><i class="bi bi-whatsapp"></i></a>
